# LinkedIn-Prospection-Agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  dashboard.py  debug_dom.py  debug_login.py  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml  docker.yml  release.yml
agent/: __init__.py  exceptions.py  graph.py  state.py
agent/nodes/: enrich_profile.py  extract_profiles.py  follow_up_scheduler.py  generate_message.py  log_action.py  score_profile.py  search_posts.py  send_connection.py
models/: __init__.py  action_log.py  post.py  profile.py
playwright_linkedin/: __init__.py  auth.py  browser.py  connection.py  profile.py  search.py
prompts/: analyze_bio.txt  generate_connection_recruiter.txt  generate_connection_technical.txt  score_profile.txt
storage/: __init__.py  database.py  queries.py  schema.sql
tests/: __init__.py  test_generate_message.py  test_models.py  test_rtk.py  test_score_node.py  test_state.py  test_storage.py  test_throttle.py
utils/: __init__.py  anti_detection.py  diagnose.py  llm_client.py  metrics.py  rtk.py  throttle.py
